add core structure for home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <header> Header Content</header>
+    <section>
+        Main Image
+    </section>
+    <section>
+      Club Ethos
+    </section>
+    <section>
+        RUnning loctaions, distances and times
+    </section>
+    <footer>
+        social links here
+    </footer>
 </body>
 </html>
