--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Love Running club for runners in Dublin ,Ireland" >
+    <meta name="description" content="Love Running club for runners in Dublin ,Ireland">
     <meta name="keywords" content="Love Running, Running Club, Ireland, Dublin">
     <link rel="stylesheet" href="css/style.css">
- <title>Love Running</title>
+    <title>Love Running</title>
 </head>
 
 <body>
-    <header> Header Content</header>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Sign Up</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         Main Image
     </section>
     <section>
-      Club Ethos
+        Club Ethos
     </section>
     <section>
         RUnning loctaions, distances and times
@@ -25,4 +43,5 @@
         social links here
     </footer>
 </body>
+
 </html>
