--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <section>
-        Main Image
+        <div id="hero-image"></div>
     </section>
     <section>
         Club Ethos
